# eduagent

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  LICENSE  NEXT_BUILD.md  ONBOARDING_BUILD.md  PLATFORM_VISION.md  README.md  ROADMAP.md  STATE_STANDARDS_BUILD.md  docker-compose.yml  pyproject.toml
.github/: .gitignore  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add_state_standards.md  bug_report.md  feature_request.md  new_subject_skill.md
.github/workflows/: ci.yml
clawed/: __init__.py  __main__.py  _entry_router.py  _json_output.py  _legacy_gateway.py  agent.py  analytics.py  assessment.py  asset_registry.py  async_utils.py  auth.py  bot_state.py  bridge.py  chat.py  cli.py  cli_chat.py  compile_game.py  compile_simulation.py  compile_slides.py  compile_student.py  compile_teacher.py  config.py  corpus.py  curriculum_map.py  database.py  differentiation.py  doc_export.py  drive.py  evaluation.py  export_docx.py  export_handout.py  export_markdown.py  export_pdf.py  export_pptx.py  export_templates.py  export_theme.py  exporter.py  failure_codes.py  feedback.py  gateway.py  (+59 more)
clawed/agent_core/: __init__.py  approvals.py  autonomy.py  context.py  core.py  custom_tools.py  fake_llm.py  identity.py  loop.py  planner.py  prompt.py  quality.py  scheduler.py
clawed/api/: __init__.py  deps.py  server.py
clawed/auth/: __init__.py  google_auth.py
clawed/commands/: __init__.py  _helpers.py  bot.py  config.py  config_llm.py  config_profile.py  drive.py  export.py  game.py  generate.py  generate_assessment.py  generate_comms.py  generate_diff.py  generate_ingest.py  generate_standards.py  generate_unit.py  kb.py  queue.py  schedule_cmd.py  simulation.py  sub.py  train.py  workspace_cmd.py
clawed/demo/: __init__.py  demo_assessment.json  demo_formative_assessment.json  demo_lesson_materials.json  demo_lesson_social_studies_g8.json  demo_master_content.json  demo_pacing_guide.json  demo_quiz.json  demo_rubric.json  demo_unit_plan.json  demo_year_map.json
clawed/formats/: __init__.py  flipchart.py  notebook.py  xbk.py
clawed/handlers/: export.py  feedback.py  gaps.py  generate.py  ingest.py  misc.py  onboard.py  schedule.py  standards.py
clawed/landing/: index.html  success.html
clawed/prompts/: 504_accommodations.txt  admin_lesson_plan.txt  formative_assessment.txt  lesson_plan.txt  master_content.txt  multi_agent_researcher.txt  multi_agent_reviewer.txt  parent_note.txt  persona_extract.txt  quiz.txt  student_packet.txt  wiki_compile.txt  wiki_query.txt
clawed/skills/: __init__.py  art.py  computer_science.py  ela.py  foreign_language.py  history.py  library.py  math.py  music.py  physical_education.py  science.py  social_studies.py  special_education.py
clawed/transports/: __init__.py  cli.py  hermes.py  openclaw.py  student_telegram.py  telegram.py  web.py
cli/: package-lock.json  package.json
cli/scripts/: build-cli.mjs
cli/source/: cli.js.map  package.json
daemon/: index.ts  package.json  process-manager.ts  telegram-bridge.ts  tsconfig.json
docs/: AGENT_HANDOFF.md  ARCHITECTURE.md  BOT_SETUP.md  CHOOSING_A_MODEL.md  DEMO_SCRIPT.md  DOCKER_SETUP.md  SLIDE_IMAGES.md  index.html  robots.txt  sitemap.xml  v235-master-plan.md  v236-plan.md  v236-release-notes.md  v238-plan.md
docs/games/: index.html
docs/internal/: ARCHITECTURE_NEXT.md  BUILD_PROMPT.md  NEXT_BUILD.md  RESEARCH_FINDINGS.md  TRANSFORM_SPEC.md
eduagent/: __init__.py  __main__.py  _compat.py  analytics.py  assessment.py  auth.py  bot_state.py  chat.py  cli.py  cli_chat.py  config.py  corpus.py  curriculum_map.py  database.py  differentiation.py  doc_export.py  drive.py  evaluation.py  exporter.py  feedback.py  gateway.py  hosted.py  improver.py  ingestor.py  io.py  lesson.py  llm.py  materials.py  mcp_server.py  memory_engine.py  model_router.py  models.py  onboarding.py  openclaw_plugin.py  parent_comm.py  parent_communication.py  persona.py  planner.py  quality.py  router.py  (+19 more)
eduagent/api/: __init__.py  server.py
eduagent/commands/: _helpers.py  bot.py  config.py  export.py  generate.py  queue.py  schedule_cmd.py  sub.py  workspace_cmd.py
eduagent/demo/: __init__.py  demo_lesson_science_g6.json
eduagent/formats/: __init__.py
eduagent/handlers/: __init__.py  export.py  feedback.py  gaps.py  generate.py  ingest.py  misc.py  onboard.py  schedule.py  standards.py
eduagent/landing/: index.html  success.html
eduagent/prompts/: assessment.txt  curriculum_gaps.txt  dbq_assessment.txt  differentiation.txt  iep_modification.txt  lesson_plan.txt  pacing_guide.txt  persona_extract.txt  rubric.txt  sub_packet.txt  summative_assessment.txt  tiered_assignments.txt  unit_plan.txt  worksheet.txt  year_map.txt
eduagent/skills/: __init__.py  art.py  base.py  computer_science.py  ela.py  foreign_language.py  history.py  library.py  math.py  music.py  science.py  (+3 more)
eduagent_data/: eduagent.db
examples/: student_demo.md
samples/: Civil_War_lesson_plan.docx  Civil_War_student_handout.docx  French_Revolution_lesson.json  Ottoman_Empire_slides.pptx  Renaissance_slides.pptx  extracted_persona.json
scripts/: build.sh  bump_version.sh  ingest_jon.py  install.sh  oauth_login.py  post_release.py  publish.sh
tests/: conftest.py  test_agent.py  test_agent_core.py  test_agent_loop.py  test_analytics.py  test_api.py  test_approvals.py  test_assessment.py  test_async_utils.py  test_autonomy.py  test_backward_compat.py  test_basic.py  test_better_memory.py  test_bot_state.py  test_browser.py  test_bundle_integration.py  test_chat.py  test_class_codes.py  test_cli_chat.py  test_closed_loop.py  test_compilation.py  test_compile_game.py  test_curriculum_kb.py  test_curriculum_map.py  test_custom_skills.py  test_custom_tools.py  test_demo.py  test_demo_mode.py  test_demo_routing.py  test_differentiation.py  test_doc_export.py  test_drive.py  test_entry_router.py  test_exports_v0920.py  test_failure_codes.py  test_feature_flag.py  test_file_manager.py  test_gap_analyzer.py  test_gateway.py  test_gateway_brain.py  (+63 more)
(+385 files in other folders)
