[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eduagent"
version = "0.1.0"
description = "Your teaching files, your AI co-teacher. Upload curriculum materials, get a digital co-teacher that generates lessons in your voice."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "EDUagent Contributors" },
]
keywords = ["education", "teachers", "lesson-plans", "ai", "teaching"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "typer>=0.9.0,<1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0,<3.0",
    "httpx>=0.25.0,<1.0",
    "anthropic>=0.40.0,<1.0",
    "openai>=1.0.0,<2.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.21",
    "reportlab>=4.0.0",
    "Jinja2>=3.1.0",
    "fastapi>=0.110.0,<1.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.6.0",
    "mcp>=1.0.0",
    "faster-whisper>=1.0.0",
    "json-repair>=0.30.0",
    "slowapi>=0.1.9,<1.0",
    "pyyaml>=6.0,<7.0",
    "apscheduler>=3.10.0,<4.0",
]

[project.optional-dependencies]
# Telegram bot support — run EDUagent as a standalone Telegram bot
telegram = ["python-telegram-bot>=20.8"]
# Google Drive support — personal accounts ONLY, never school-issued accounts
google = ["google-api-python-client>=2.0.0", "google-auth-oauthlib>=1.0.0"]
# Voice transcription
voice = ["faster-whisper>=0.10.0"]
# TUI dashboard
tui = ["textual>=0.56.0"]
# All optional features
all = ["python-telegram-bot>=20.0", "faster-whisper>=0.10.0", "textual>=0.56.0"]
pdf = ["weasyprint>=60.0"]
keyring = ["keyring>=24.0.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0"]

[project.scripts]
eduagent = "eduagent.cli:app"

[project.urls]
Homepage = "https://github.com/SirhanMacx/eduagent"
Documentation = "https://github.com/SirhanMacx/eduagent#readme"
Issues = "https://github.com/SirhanMacx/eduagent/issues"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
