[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawed"
version = "1.0.7"
description = "Claw-ED — personal AI teaching agent. Learns your voice, works while you sleep."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jon Maccarello & Claw-ED contributors" },
]
keywords = ["education", "teachers", "lesson-plans", "ai", "teaching", "clawed", "claw-ed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "typer>=0.9.0,<1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0,<3.0",
    "httpx>=0.25.0,<1.0",
    "anthropic>=0.40.0,<1.0",
    "openai>=1.0.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.21",
    "reportlab>=4.0.0",
    "Jinja2>=3.1.0",
    "fastapi>=0.110.0,<1.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.6.0",
    "mcp>=1.0.0",
    "json-repair>=0.30.0",
    "pyyaml>=6.0,<7.0",
    "apscheduler>=3.10.0,<4.0",
]

[project.optional-dependencies]
google = ["google-api-python-client>=2.0.0", "google-auth-oauthlib>=1.0.0"]
voice = ["faster-whisper>=0.10.0"]
tui = ["textual>=0.56.0"]
memory = ["onnxruntime>=1.16.0"]
all = [
    "faster-whisper>=0.10.0",
    "textual>=0.56.0",
    "keyring>=24.0.0",
    "uvicorn[standard]>=0.27.0",
    "onnxruntime>=1.16.0",
]
pdf = ["weasyprint>=60.0"]
keyring = ["keyring>=24.0.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0", "apscheduler>=3.10.0,<4.0", "faster-whisper>=0.10.0"]

[project.scripts]
clawed = "clawed.cli:app"
eduagent = "clawed.cli:app"

[project.urls]
Homepage = "https://github.com/SirhanMacx/Claw-ED"
Documentation = "https://github.com/SirhanMacx/Claw-ED#readme"
Issues = "https://github.com/SirhanMacx/Claw-ED/issues"

[tool.hatch.build.targets.wheel]
packages = ["clawed", "eduagent"]

[tool.hatch.build.targets.sdist]
include = ["clawed/**", "eduagent/**"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"clawed/export_docx.py" = ["N806"]
"clawed/export_pptx.py" = ["N806"]
"clawed/export_handout.py" = ["N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
